--- a/pom.xml
+++ b/pom.xml
@@ -4,28 +4,35 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>vc-scanner-gui</artifactId>
+    <groupId>DHS</groupId>
+    <artifactId>Compiler-Exe</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <!-- https://mvnrepository.com/artifact/de.jflex/jflex -->
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/de.jflex/jflex -->
         <dependency>
             <groupId>de.jflex</groupId>
             <artifactId>jflex</artifactId>
             <version>1.8.1</version>
         </dependency>
     </dependencies>
+
+
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
+
 
 </project>
